deploy/kcp-hacbs-workspace-init/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jvm-build-workspace-artifact-cache
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: jvm-build-workspace-artifact-cache
  type: ClusterIP
