deploy/kcp-hacbs-workspace-init/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jvm-build-workspace-artifact-cache
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jvm-build-workspace-artifact-cache
                port:
                  number: 80
